--- a/LMB Fix/LMB Fix.csproj
+++ b/LMB Fix/LMB Fix.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>LMB Fix</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -30,6 +30,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>LMB_Fix.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
