--- a/LMB Fix/LMB Fix.csproj
+++ b/LMB Fix/LMB Fix.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalHooks\MouseHook.cs" />
+    <Compile Include="GlobalHooks\NativeSupport.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
