Implemented saving settings.

--- a/LMB Fix/Properties/Settings.settings
+++ b/LMB Fix/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="RightButtonDelay" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">20</Value>
     </Setting>
+    <Setting Name="LeftButtonFixEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="RightButtonFixEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
