--- a/LMB Fix/App.config
+++ b/LMB Fix/App.config
@@ -16,6 +16,12 @@
             <setting name="RightButtonDelay" serializeAs="String">
                 <value>20</value>
             </setting>
+            <setting name="LeftButtonFixEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="RightButtonFixEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
         </LMB_Fix.Properties.Settings>
     </userSettings>
 </configuration>
