Implemented running with windows.

--- a/LMB Fix/Properties/Settings.settings
+++ b/LMB Fix/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="RightButtonFixEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="RunAtStartup" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
