--- a/LMB Fix/App.config
+++ b/LMB Fix/App.config
@@ -22,6 +22,9 @@
             <setting name="RightButtonFixEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="RunAtStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
         </LMB_Fix.Properties.Settings>
     </userSettings>
 </configuration>
